adicionando paginas e iframe

--- a/projetos.html
+++ b/projetos.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-    <h1>aaaaaaaaaaaaaaa</h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>Bem-vindo à minha página</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/eIEZmX7R-qc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    </main>
+    <footer>
+        <p>&copy; 2023 - Todos os direitos reservados</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
