adicionando paginas e iframe 2

--- a/projetos.html
+++ b/projetos.html
@@ -19,7 +19,10 @@
         </nav>
     </header>
     <main>
+        <br>
         <h1>Bem-vindo à minha página</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KCVW7bCvwlI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/eIEZmX7R-qc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    </main>
     <footer>
         <p>&copy; 2023 - Todos os direitos reservados</p>
