--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="projetos.html">Página Inicial</a></li>
-				<li><a href="#">Projetos</a></li>
+				<li><a href="index.html">Página Inicial</a></li>
+				<li><a href="projetos.html">Projetos</a></li>
 			</ul>
 		</nav>
 	</header>
