--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="index.html">Página Inicial</a></li>
+				<li><a href="/">Página Inicial</a></li>
 				<li><a href="projetos.html">Projetos</a></li>
 			</ul>
 		</nav>
