--- a/projetos.html
+++ b/projetos.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Página Inicial</a></li>
+                <li><a href="/">Página Inicial</a></li>
                 <li><a href="projetos.html">Projetos</a></li>
             </ul>
         </nav>
