--- a/index.html
+++ b/index.html
@@ -4,20 +4,26 @@
 	<meta charset="UTF-8">
 	<title>Exemplo de Menu</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+    
 </head>
 <body>
 	<header>
 		<nav>
 			<ul>
-				<li><a href="index.html">Página Inicial</a></li>
-				<li><a href="projetos.html">Projetos</a></li>
+				<li><a class="menuLink" href="index.html">Página Inicial</a></li>
+				<li><a class="menuLink" href="projetos.html">Projetos</a></li>
 			</ul>
+            <span class="target"></span>
+
 		</nav>
 	</header>
 
 	<main>
-		<h1>Bem-vindo à minha página</h1>
+		<h1>Portifolio</h1>
 		<p>Aqui você encontrará informações sobre meus projetos e trabalhos</p>
+        <button onclick="downloadCvEnglish()">Download Resume in English</button>
+        <button onclick="downloadCvPortugues()">Baixar Currículo</button>
+
 	</main>
 
 	<footer>
