--- a/projetos.html
+++ b/projetos.html
@@ -13,8 +13,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Página Inicial</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
+                <li><a class="menuLink" href="index.html">Página Inicial</a></li>
+				<li><a class="menuLink" href="projetos.html">Projetos</a></li>           
             </ul>
         </nav>
     </header>
