estilização botões CV

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<main>
 		<h1>Portifolio</h1>
 		<p>Aqui você encontrará informações sobre meus projetos e trabalhos</p>
-        <button onclick="downloadCvEnglish()">Download Resume in English</button>
-        <button onclick="downloadCvPortugues()">Baixar Currículo</button>
+        <button class="botaoCv" onclick="downloadCvEnglish()">Download Resume</button>
+        <button class="botaoCv" onclick="downloadCvPortugues()">Baixar Currículo</button>
 
 	</main>
 
