--- a/projetos.html
+++ b/projetos.html
@@ -20,13 +20,35 @@
     </header>
     <main>
         <br>
-        <h1>Bem-vindo à minha página</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/KCVW7bCvwlI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/eIEZmX7R-qc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    </main>
-    <footer>
-        <p>&copy; 2023 - Todos os direitos reservados</p>
-    </footer>
+		<h1 style="display: none;">Portifolio</h1>
+        <section class="divPosts">
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6940395084349661184" height="1202" width="504" frameborder="0" allowfullscreen="" title="Publicação incorporada"></iframe>
+            <br>
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6942620320906260481" height="719" width="504" frameborder="0" allowfullscreen="" title="Publicação incorporada"></iframe>
+            <br>
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6953112461247922176" height="1068" width="504" frameborder="0" allowfullscreen="" title="Publicação incorporada"></iframe>
+
+        </section>
+
+        <section class="divPosts">
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7032065577179394050" height="1234" width="504" frameborder="0" allowfullscreen="" title="Publicação incorporada"></iframe>        </section>
+
+         </main>
+
+         <footer>
+            <div class="conteudoFooter">
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/oduardoruiz/" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://github.com/OduardoRuiz" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+                <p>&copy; Eduardo Ruiz</p>
+    
+            </div>
+        </footer>
 
     <script src="script.js"></script>
 </body>
