--- a/index.html
+++ b/index.html
@@ -41,19 +41,23 @@
 				</path>
 				<text font-size="26" fill='hsla(36, 10%, 85%, 1)'>
 					<textPath xlink:href="#path">
-						Olá Meu nome é Eduardo.</textPath>
+						Olá, meu nome é Eduardo!</textPath>
 				</text>
 			</svg>
 		</section>
-		<h3>e eu Faço coisas para a web</h3>
-		<h4>Sou um desenvolvedor apaixonado por tecnologia e residente no centro de São Paulo. Com experiência em
-			Laravel, HTML e CSS, além de outras áreas como geração de leads e desenvolvimento Java, concluí com sucesso
-			o curso de Sistemas para Internet no SENAC.</h4>
-
-		<p>Faça o download do meu Resumo profissional</p>
+		<section class="textoHomeSection">
+			<h3 class="fontHomeSection">Sou um desenvolvedor apaixonado por tecnologia e residente no centro de São Paulo. Com experiência em
+				Laravel, HTML e CSS, além de outras áreas como geração de leads e desenvolvimento Java, concluí com sucesso
+				o curso de Sistemas para Internet no SENAC.
+			</h3>
+	
+			<p class="fontHomeSection">Faça o download do meu Resumo profissional</p>
+		</section>
+	
 		<button class="botaoCv" onclick="downloadCvEnglish()">Download Resume</button>
 		<button class="botaoCv" onclick="downloadCvPortugues()">Baixar Currículo</button>
 
+		
 
 
 	</main>
