--- a/projetos.html
+++ b/projetos.html
@@ -32,22 +32,34 @@
     <main>
         <br>
         <h1 style="display: none;">Portifolio</h1>
+
+
         <section class="divPosts">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <h2>PetMiau</h2>
+                <span class="textoInformativoCarrossel">Abaixo, você encontrará os posts no LinkedIn que apresentam <br>
+                    vídeos e fornecem explicações mais detalhadas sobre o sistema.</span>
+            <div id="carouselExampleFade" class="carousel slide carousel-fade mt-4" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+
+                        <span class="tituloCarrossel">Post principal</span>
+                        <br>
                         <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6940395084349661184"
-                        class="postsConteudo" frameborder="0" allowfullscreen=""
+                            class="postsConteudo" frameborder="0" allowfullscreen=""
                             title="Publicação incorporada"></iframe>
                     </div>
                     <div class="carousel-item">
+                        <span class="tituloCarrossel">Mostrando o backend</span>
+                        <br>
                         <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6942620320906260481"
-                        class="postsConteudo" frameborder="0" allowfullscreen=""
+                            class="postsConteudo" frameborder="0" allowfullscreen=""
                             title="Publicação incorporada"></iframe>
                     </div>
                     <div class="carousel-item">
+                        <span class="tituloCarrossel">Estrutura de cloud</span>
+                        <br>
                         <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6953112461247922176"
-                           class="postsConteudo"  frameborder="0" allowfullscreen=""
+                            class="postsConteudo" frameborder="0" allowfullscreen=""
                             title="Publicação incorporada"></iframe>
                     </div>
                 </div>
