--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,40 +24,28 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a class="menuLink" href="index.html">Página Inicial</a></li>
-				<li><a class="menuLink" href="projetos.html">Projetos</a></li>
+				<li><a class="menuLink" href="projetos.html">Projetos</a></li>/
+				<li><a class="menuLink" href="https://www.linkedin.com/in/oduardoruiz/" target="_blank">Linkedin</a></li>/
+				<li><a class="menuLink" href="https://github.com/OduardoRuiz" target="_blank">Github</a></li>/
+				<li><a class="menuLink" href="https://api.whatsapp.com/message/R5XERYN6P4GOK1" target="_blank">Whatsapp</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<main>
 		<h1 style="display: none;">Portifolio</h1>
-		<section class="textoAnimacaoSection">
-			<svg class="textoAnimacaoSvg" viewBox="0 00 400 200" xmlns="http://www.w3.org/2000/svg"
-				xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-				<path id="path">
-					<animate attributeName="d" from="m0,110 h0" to="m0,110 h1100" dur="6.8s" begin="0s"
-						repeatCount="indefinite" />
-				</path>
-				<text font-size="26" fill='hsla(36, 10%, 85%, 1)'>
-					<textPath xlink:href="#path">
-						Olá, meu nome é Eduardo!</textPath>
-				</text>
-			</svg>
-		</section>
 		<section class="textoHomeSection">
+			<h2 class="digitar">Olá, meu nome é Eduardo !</h2>
 			<h3 class="fontHomeSection">Sou um desenvolvedor apaixonado por tecnologia e residente no centro de São Paulo. Com experiência em
 				Laravel, HTML e CSS, além de outras áreas como geração de leads e desenvolvimento Java, concluí com sucesso
 				o curso de Sistemas para Internet no SENAC.
 			</h3>
-	
 			<p class="fontHomeSection">Faça o download do meu Resumo profissional</p>
 		</section>
 	
 		<button class="botaoCv" onclick="downloadCvEnglish()">Download Resume</button>
 		<button class="botaoCv" onclick="downloadCvPortugues()">Baixar Currículo</button>
 
-		
 
 
 	</main>
