--- a/projetos.html
+++ b/projetos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,14 +21,16 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a class="menuLink" href="index.html">Página Inicial</a></li>
-                <li><a class="menuLink" href="projetos.html">Projetos</a></li>
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <nav>
+                <ul>
+                    <li><a class="menuLink" href="index.html">Página principal</a></li>/
+                    <li><a class="menuLink" href="https://www.linkedin.com/in/oduardoruiz/" target="_blank">Linkedin</a></li>/
+                    <li><a class="menuLink" href="https://github.com/OduardoRuiz" target="_blank">Github</a></li>/
+                    <li><a class="menuLink" href="https://api.whatsapp.com/message/R5XERYN6P4GOK1" target="_blank">Whatsapp</a></li>
+                </ul>
+            </nav>
+        </header>
     <main>
         <br>
         <h1 style="display: none;">Portifolio</h1>
