--- a/projetos.html
+++ b/projetos.html
@@ -79,21 +79,11 @@
         </section>
 
     </main>
-
     <footer>
-        <div class="conteudoFooter">
-            <div class="social-icons">
-                <a href="https://www.linkedin.com/in/oduardoruiz/" target="_blank">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="https://github.com/OduardoRuiz" target="_blank">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-            <p>&copy; Eduardo Ruiz</p>
-
-        </div>
-    </footer>
+		<div class="conteudoFooter d-flex">
+			<p class="nomeFooter">&copy; 2023 Desenvolvido por Eduardo Ruiz </p>
+		</div>
+	</footer>
 
     <script src="script.js"></script>
 </body>
