--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<h1 style="display: none;">Portifolio</h1>
 		<section class="textoHomeSection">
 			<img class="imgPerfil img-fluid" src="document/image/perfil.jpg" alt="Img Perfil">
-			<div>
+			<div class="">
 				<h2 class="digitar">Olá, meu nome é Eduardo! &#128521;</h2>
 			</div>
 			<h3 class="fontHomeSection">Criando soluções tecnológicas sob <br> medida para transformar suas ideias em
