--- a/projetos.html
+++ b/projetos.html
@@ -37,9 +37,9 @@
 
 
         <section class="divPosts">
-            <h2>PetMiau</h2>
-                <span class="textoInformativoCarrossel">Abaixo, você encontrará os posts no LinkedIn que apresentam <br>
-                    vídeos e fornecem explicações mais detalhadas sobre o sistema.</span>
+            <h2 class="">PetMiau</h2>
+            <h3 class="fontHomeSection" style="font-size: 30px; margin: 50px;">Abaixo, você encontrará os posts no LinkedIn que apresentam
+                vídeos e fornecem explicações mais detalhadas sobre o sistema.</h3>
             <div id="carouselExampleFade" class="carousel slide carousel-fade mt-4" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
