--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
 <body>
 	<header>
 		<nav>
-			<ul>
+			<ul >
 				<li><a class="menuLink" href="projetos.html">Projetos</a></li>/
-				<li><a class="menuLink" href="https://www.linkedin.com/in/oduardoruiz/" target="_blank">Linkedin</a>
-				</li>/
+				<li><a class="menuLink" href="https://www.linkedin.com/in/oduardoruiz/" target="_blank">Linkedin</a></li>/
 				<li><a class="menuLink" href="https://github.com/OduardoRuiz" target="_blank">Github</a></li>/
-				<li><a class="menuLink" href="https://api.whatsapp.com/message/R5XERYN6P4GOK1"
-						target="_blank">Whatsapp</a></li>
+				<li><a class="menuLink" href="https://api.whatsapp.com/message/R5XERYN6P4GOK1" target="_blank">Whatsapp</a></li>
 			</ul>
 		</nav>
 	</header>
 
+	<hr style="margin: 5px;">
 	<main>
 		<h1 style="display: none;">Portifolio</h1>
 		<section class="textoHomeSection">
@@ -50,6 +49,8 @@
 			<button class="botaoCv" onclick="downloadCvPortugues()">Baixar Currículo</button>
 
 		</section>
+		<hr class="mt-5 mb-3" style="margin: 5px;">
+
 		<section class="cardsSection container">
 			<h2 class="fontHomeSection text-center">Conheça minhas habilidades técnicas e competências interpessoais.
 			</h2>
@@ -112,6 +113,10 @@
 					</div>
 				</div>
 			</div>
+		</section>
+		<section class="text-center">
+			<p class="mt-5">Entre em  contato comigo</p>
+			<button class="botaoCv"><a href="mailto:carloseduardoruizs@gmail.com" style="text-decoration: none; color: white;">Enviar E-mail</a></button>
 		</section>
 	</main>
 
