--- a/projetos.html
+++ b/projetos.html
@@ -22,9 +22,9 @@
 
 <body>
         <header>
-            <nav>
+            <nav class="d-flex">
                 <ul>
-                    <li><a class="menuLink" href="index.html">Página principal</a></li>/
+                    <li><a class="menuLink" href="index.html">Home</a></li>/
                     <li><a class="menuLink" href="https://www.linkedin.com/in/oduardoruiz/" target="_blank">Linkedin</a></li>/
                     <li><a class="menuLink" href="https://github.com/OduardoRuiz" target="_blank">Github</a></li>/
                     <li><a class="menuLink" href="https://api.whatsapp.com/message/R5XERYN6P4GOK1" target="_blank">Whatsapp</a></li>
@@ -32,7 +32,7 @@
             </nav>
         </header>
     <main>
-        <br>
+        <hr class="mb-5" style="margin: 5px;">
         <h1 style="display: none;">Portifolio</h1>
 
 
