correção textos cards

--- a/index.html
+++ b/index.html
@@ -58,28 +58,25 @@
 				<div class="col-11 col-md-6 col-lg-3 m-3 card text-white bg-dark mb-3" style="max-width: 18rem;">
 					<div class="card-body">
 						<h5 class="card-title">Laravel <i class="fab fa-laravel"></i></h5>
-						<p class="card-text">Utilizo Laravel na versão 10 e anteriores, para criar aplicações,
-							utilizando o framework como Api, ou blade.php</p>
+						<p class="card-text">O Laravel é utilizado tanto em suas versões mais recentes quanto nas versões 10 e anteriores para criação de aplicações, aproveitando a versatilidade do framework tanto para construir APIs quanto para desenvolver interfaces por meio do Blade.php.</p>
 					</div>
 				</div>
 				<div class="col-11 col-md-6 col-lg-3 m-3 card text-white bg-dark mb-3" style="max-width: 18rem;">
 					<div class="card-body">
 						<h5 class="card-title">Javascript <i class="fab fa-js-square"></i></h5>
-						<p class="card-text">Utilizando funções javascript para facilitar o desenvolvimento de feactures
-							para o projeto em vigencia</p>
+						<p class="card-text">As funções JavaScript são utilizadas para acelerar o desenvolvimento de novas funcionalidades no projeto, trazendo benefícios como a simplificação do código e a melhoria na manutenção do sistema.</p>
 					</div>
 				</div>
 				<div class="col-11 col-md-6 col-lg-3 m-3 card text-white bg-dark mb-3" style="max-width: 18rem;">
 					<div class="card-body">
 						<h5 class="card-title">Angular 8 <i class="fab fa-angular"></i></h5>
-						<p class="card-text">em conjunto com o material design, angular para consumir apis de diferentes
-							areas</p>
+						<p class="card-text">A combinação do Material Design com o Angular para consumir APIs de diferentes áreas tem se mostrado uma abordagem eficaz para desenvolver interfaces modernas e funcionais para uma variedade de aplicações.</p>
 					</div>
 				</div>
 				<div class="col-11 col-md-6 col-lg-3 m-3 card text-white bg-dark mb-3" style="max-width: 18rem;">
 					<div class="card-body">
 						<h5 class="card-title">Kotlin <i class="fab fa-android"></i></h5>
-						<p class="card-text">Desenvolvimento android mobile nativo, utilizando o android studio</p>
+						<p class="card-text">O desenvolvimento de aplicativos móveis nativos para Android é realizado por meio do Android Studio, que oferece ferramentas e recursos para a criação de aplicativos eficientes e de alta qualidade.</p>
 					</div>
 				</div>
 
@@ -87,29 +84,26 @@
 				<div class="col-11 col-md-6 col-lg-3 m-3 card text-white bg-dark mb-3" style="max-width: 18rem;">
 					<div class="card-body">
 						<h5 class="card-title">Java 8 <i class="fab fa-java"></i></h5>
-						<p class="card-text">Conceitos basicos na linguagem java 8 utilizando spring boot e outros</p>
+						<p class="card-text">Os conceitos básicos da linguagem Java 8 são explorados por meio do uso do Spring Boot e outras ferramentas, permitindo a construção de aplicações robustas e eficientes.</p>
 					</div>
 				</div>
 				<div class="col-11 col-md-6 col-lg-3 m-3 card text-white bg-dark mb-3" style="max-width: 18rem;">
 					<div class="card-body">
 						<h5 class="card-title">MySQL <i class="fas fa-database"></i></h5>
-						<p class="card-text">Para gerenciar e criar banco de dados,
-							utilizando principalmente sempre em conjunto com o Laravel</p>
+						<p class="card-text">O Laravel é uma das principais ferramentas utilizadas para gerenciar e criar bancos de dados, oferecendo recursos avançados para a criação de aplicações web e facilitando o processo de desenvolvimento.</p>
 					</div>
 				</div>
 				<div class="col-11 col-md-6 col-lg-3 m-3 card text-white bg-dark mb-3" style="max-width: 18rem;">
 					<div class="card-body">
 						<h5 class="card-title">HTML/CSS3 <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i>
 						</h5>
-						<p class="card-text">Conceitos avançados em css e Html, sempre visando a a melhor experiencia de
-							usuario e SEO da pagina web</p>
+						<p class="card-text">São explorados conceitos avançados em CSS e HTML, sempre com foco na melhoria da experiência do usuário e na otimização para motores de busca (SEO), visando garantir uma página web eficiente e de alta qualidade.</p>
 					</div>
 				</div>
 				<div class="col-11 col-md-6 col-lg-3 m-3 card text-white bg-dark mb-3" style="max-width: 18rem;">
 					<div class="card-body">
 						<h5 class="card-title">Bootstrap <i class="fab fa-bootstrap"></i></h5>
-						<p class="card-text">Frameword CSS para facilitar e agilizar o desenvolvimento das paginas com
-							Responsividade para mobile</p>
+						<p class="card-text">O uso de um framework CSS é uma excelente forma de agilizar o desenvolvimento de páginas web, garantindo a responsividade para dispositivos móveis e facilitando a criação de layouts eficientes e modernos.</p>
 					</div>
 				</div>
 			</div>
